Test framework doc finished

--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -8,7 +8,7 @@
 
 \begin{itemize}
 	\item possibilities to enhance dependability - in which layers of the deployment (infr, K8s definition, application, using 3rd party technologies)
-	\item CI/CD pipeline changes
+	\item CI/CD pipeline changes -  new steps
 \end{itemize}
 
 %----------------------------------------------------------------------------
@@ -21,6 +21,7 @@
 
 \begin{itemize}
 	\item robust, fault-tolerant messaging
+	\item widely used in the industry
 \end{itemize}
 
 %----------------------------------------------------------------------------
