--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -100,6 +100,12 @@
 	title        = {Grafana {H}elm {C}hart (08/12/2021)},
 }
 
+@misc{Jenkins,
+	author       = {{Jenkins project}},
+	howpublished = {\url{https://www.jenkins.io/}},
+	title        = {Jenkins (09/12/2021)},
+}
+
 
 
 
